--- a/ebin/Makefile.am
+++ b/ebin/Makefile.am
@@ -15,10 +15,11 @@ beam_DATA = m3ua.beam m3ua_app.beam \
 		m3ua_server_assoc_fsm.beam \
 		m3ua_client_assoc_sup.beam \
 		m3ua_client_assoc_fsm.beam \
-		m3ua_lm_server.beam
+		m3ua_lm_server.beam \
+		m3ua_codec.beam
 
 %.beam:$(top_srcdir)/src/%.erl
-	$(ERLC) $(ERLCFLAGS) -I $(top_builddir)/include -I $(top_builddir)/src $<
+	$(ERLC) $(ERLCFLAGS) -I $(top_srcdir)/include $<
 
 %.app:   %.app-in
 	sed -e 's/%APP_NAME%/$(PACKAGE_NAME)/' \
