--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -6,11 +6,11 @@ modhtml = m3ua.html m3ua_app.html \
 		m3ua_sup.html \
 		m3ua_server_sup.html \
 		m3ua_server_endpoint_sup.html \
-		m3ua_server_assoc_sup.html \
 		m3ua_server_endpoint_server.html \
-		m3ua_server_assoc_fsm.html \
-		m3ua_client_assoc_sup.html \
-		m3ua_client_assoc_fsm.html \
+		m3ua_sgp_sup.html \
+		m3ua_sgp_fsm.html \
+		m3ua_asp_sup.html \
+		m3ua_asp_fsm.html \
 		m3ua_lm_server.html \
 		m3ua_codec.html
 
