--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,8 +95,7 @@ pages:otp-18:
     - mkdir -p .public/doc .public/tests
     - cp -r .build/otp-18.*/m3ua/test/log/* .public/tests
     - cp -r .build/otp-18.*/m3ua/doc/* .public/doc
-    - mv .public/tests public
-    - mv .public/doc public
+    - mv .public public
   artifacts:
     when: always
     paths:
@@ -112,8 +111,7 @@ pages:otp-19:
     - mkdir -p .public/doc .public/tests
     - cp -r .build/otp-19.*/m3ua/test/log/* .public/tests
     - cp -r .build/otp-19.*/m3ua/doc/* .public/doc
-    - mv .public/tests public
-    - mv .public/doc public
+    - mv .public public
   artifacts:
     when: always
     paths:
@@ -129,8 +127,7 @@ pages:otp-20:
     - mkdir -p .public/doc .public/tests
     - cp -r .build/otp-20.*/m3ua/test/log/* .public/tests
     - cp -r .build/otp-20.*/m3ua/doc/* .public/doc
-    - mv .public/tests public
-    - mv .public/doc public
+    - mv .public public
   artifacts:
     when: always
     paths:
