--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 ##
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = include ebin doc test
+SUBDIRS = include ebin doc priv mibs test
 
 .PHONY: release
 release: $(PACKAGE_VERSION).tar.gz
