correct code path for building package

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ release: $(PACKAGE_VERSION).tar.gz
 
 $(PACKAGE_VERSION).tar.gz: $(PACKAGE_NAME).rel sys.config
 	cp $(PACKAGE_NAME).rel $(PACKAGE_VERSION).rel
-	$(ERL) -noinput \
+	$(ERL) -noinput -pa $(builddir)/ebin \
 		-eval "systools:make_script(\"$(PACKAGE_VERSION)\")" \
 		-eval "systools:make_tar(\"$(PACKAGE_VERSION)\", [{dirs, [include]}])" \
 		-s init stop
