--- a/ebin/Makefile.am
+++ b/ebin/Makefile.am
@@ -19,7 +19,10 @@ beam_DATA = m3ua.beam m3ua_app.beam \
 		m3ua_lm_server.beam \
 		m3ua_codec.beam \
 		m3ua_callback.beam \
-		m3ua_mib.beam
+		m3ua_mib.beam \
+		m3ua_rest_accepted_content.beam \
+		m3ua_rest_get.beam \
+		m3ua_rest_prometheus.beam
 
 %.beam:$(top_srcdir)/src/%.erl
 	$(ERLC) $(ERLCFLAGS) -I $(top_srcdir)/include $<
