--- a/sys.config.in
+++ b/sys.config.in
@@ -7,5 +7,27 @@
       {error_logger_mf_dir, "log/sasl"},
       {error_logger_mf_maxbytes, 10485760},
       {error_logger_mf_maxfiles, 10}]},
+{snmp,
+      [{agent,
+             [{config, [{dir, "snmp/conf"}]},
+             {db_dir, "snmp/db"}]}]},
+{inets,
+      [{services,
+         [{httpd,
+            [{server_name, "m3ua"},
+            {directory_index, ["index.html"]},
+            {transfer_disk_log, "log/http/transfer"},
+            {security_disk_log, "log/http/security"},
+            {error_disk_log, "log/http/error"}, 
+            {transfer_disk_log_size, {10485760, 10}},
+            {error_disk_log_size, {10485760, 10}},
+            {error_disk_log_size, {10485760, 10}},
+            {disk_log_format, internal},
+            {modules, [mod_alias, m3ua_rest_accepted_content,
+                  m3ua_rest_get, mod_get, mod_disk_log]},
+            {port, 8080}, 
+            {server_root, "./"},
+            {alias, {"/doc", "@ERLANG_INSTALL_LIB_DIR@/@PACKAGE@-@VERSION@/doc"}},
+            {document_root, "@ERLANG_INSTALL_LIB_DIR@/@PACKAGE@-@VERSION@/priv/www"}]}]}]},
 {m3ua,
       []}].
