remove unused test modules

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,9 +5,7 @@
 
 testmods = m3ua_api_SUITE \
 			m3ua_codec_SUITE \
-			m3ua_snmp_SUITE \
-			m3ua_demo_as \
-			m3ua_demo_sg
+			m3ua_snmp_SUITE
 
 check_DATA = .dialyzer_ok .common_test_ok
 
