--- a/sys.config.in
+++ b/sys.config.in
@@ -27,7 +27,7 @@
                   m3ua_rest_get, mod_get, mod_disk_log]},
             {port, 8080}, 
             {server_root, "./"},
-            {alias, {"/doc", "@ERLANG_INSTALL_LIB_DIR@/@PACKAGE@-@VERSION@/doc"}},
-            {document_root, "@ERLANG_INSTALL_LIB_DIR@/@PACKAGE@-@VERSION@/priv/www"}]}]}]},
+            {alias, {"/doc", "lib/@PACKAGE@-@VERSION@/doc"}},
+            {document_root, "lib/@PACKAGE@-@VERSION@/priv/www"}]}]}]},
 {m3ua,
       []}].
