--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -40,6 +40,10 @@ overview.edoc: overview.edoc-in
 	done
 	-cp -n $(top_srcdir)/doc/sigscale-logo.png .
 	-cp -n $(top_srcdir)/doc/supervision.png .
+	-cp -n $(top_srcdir)/doc/asp-states.png .
+	-cp -n $(top_srcdir)/doc/as-states.png .
+	-cp -n $(top_srcdir)/doc/boundaries.png .
+	-cp -n $(top_srcdir)/doc/message-sequence.png .
 
 CLEANFILES = overview.edoc edoc-info index.html \
 		modules-frame.html overview-summary.html packages-frame.html \
