--- a/sys.config.in
+++ b/sys.config.in
@@ -23,8 +23,12 @@
             {error_disk_log_size, {10485760, 10}},
             {error_disk_log_size, {10485760, 10}},
             {disk_log_format, internal},
-            {modules, [mod_alias, m3ua_rest_accepted_content,
-                  m3ua_rest_get, mod_get, mod_disk_log]},
+            {modules,
+						[mod_alias,
+						m3ua_rest_accepted_content,
+                  m3ua_rest_get,
+						mod_get,
+						mod_disk_log]},
             {port, 8080}, 
             {server_root, "./"},
             {alias, {"/doc", "lib/@PACKAGE@-@VERSION@/doc"}},
