add missing macros

--- a/configure.ac
+++ b/configure.ac
@@ -34,7 +34,10 @@ AC_ERLANG_SUBST_LIB_DIR
 if test -z "${ERLANG_INSTALL_LIB_DIR}" ; then
 	ERLANG_INSTALL_LIB_DIR=$ERLANG_LIB_DIR
 fi
+AC_ERLANG_SUBST_ROOT_DIR
+AC_PROG_MKDIR_P
 AC_PROG_INSTALL
+AC_PROG_LN_S
 AC_ERLANG_SUBST_INSTALL_LIB_DIR
 otpdir=$ERLANG_INSTALL_LIB_DIR/..
 appdir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION
