--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,8 +9,11 @@ testmods = m3ua_api_SUITE \
 
 check_DATA = .dialyzer_ok .common_test_ok
 
+DIA_ARGS =
+CT_ARGS = -spec test.spec
+
 .dialyzer_ok:	$(addsuffix .beam, $(testmods))
-	dialyzer --src $(top_srcdir)/src
+	dialyzer ${DIA_ARGS} --src $(top_srcdir)/src
 
 %.beam:$(top_srcdir)/test/%.erl $(top_srcdir)/include/m3ua.hrl
 	$(ERLC) -pa $(top_builddir)/ebin $(ERLCFLAGS) -I $(top_srcdir)/include $<
@@ -19,7 +22,8 @@ check_DATA = .dialyzer_ok .common_test_ok
 	@if [ ! -d log ]; then mkdir log; fi
 	@if [ ! -f ct.cfg ]; then cp $(top_srcdir)/test/ct.cfg .; fi
 	@if [ ! -f test.spec ]; then cp $(top_srcdir)/test/test.spec .; fi
-	ct_run -no_auto_compile -pa $(top_builddir)/ebin -logdir log -config ct.cfg -spec test.spec -dir . -erl_args -noshell -sname $(LOGNAME)-ct
+	ct_run -no_auto_compile -pa $(top_builddir)/ebin -logdir log -config ct.cfg \
+			${CT_ARGS} -dir . -erl_args -noshell -sname $(LOGNAME)-ct
 
 clean-local:
 	-rm -r log/*
